[package]
name = "thetadatadx"
version = "13.0.0-rc.5"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "No-JVM ThetaData SDK — native Rust client for historical, streaming, and bulk flat-file market data"
documentation = "https://docs.rs/thetadatadx"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["thetadata", "market-data", "tick-data", "zero-copy", "low-latency"]
categories = ["finance", "api-bindings", "network-programming", "encoding"]
readme = "README.md"
include = ["src/**/*", "proto/**/*", "data/*.toml", "build.rs", "build_support/**/*", "Cargo.toml", "tick_schema.toml", "endpoint_surface.toml", "config_surface.toml", "sdk_surface.toml", "fpss_event_schema.toml"]

[lib]
name = "thetadatadx"
path = "src/lib.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
# Explicit feature list mirroring the CI rustdoc job
# (`cargo doc --no-deps -p thetadatadx --features arrow,polars,frames,config-file`).
# Never use `all-features = true` here — it would re-enable any internal
# bench-only feature flag and surface non-public symbols on docs.rs.
features = ["arrow", "polars", "frames", "config-file"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
config-file = ["dep:toml", "dep:regex", "dep:heck"]
# Pulls `prost-build` into the regular dep graph for the
# `refresh_grpc_snapshot` developer binary. Strictly off for normal
# crate builds — the build script keeps its own `prost-build` under
# `[build-dependencies]`.
grpc-codegen = ["dep:prost-build"]
# Optional Prometheus exporter. When enabled, a `metrics-exporter-prometheus`
# HTTP listener binds to `DirectConfig::metrics_port` (see the
# `observability` module) and serves recorder state on `/metrics`.
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
# DataFrame ergonomics for Rust consumers — `.to_polars()` / `.to_arrow()`
# extension traits on slices of tick rows (see `src/frames.rs`).
# Opt-in: polars and arrow stay behind feature flags so the default dep graph
# is unchanged. `frames` is a convenience alias pulling both in at once.
polars = ["dep:polars"]
arrow = ["dep:arrow-array", "dep:arrow-schema"]
frames = ["polars", "arrow"]
# Opt-in gate for tests that hit live MDDS / FPSS endpoints. Default-off
# so `cargo test` never burns a live call without the user asking for it.
live-tests = []
# Private, unstable feature gating a handful of `pub(crate)`-shape
# constructors that exist solely so integration tests under `tests/`
# can build a `HistoricalClient` against a mock REST server without paying
# for a real Nexus auth handshake. Double-underscore prefix marks it
# as unsupported: callers outside this repository must not enable it,
# and the API stability contract does not apply.
#
# Activated by `[[test]] required-features = ["__test-helpers"]` and
# by the `test` job in `.github/workflows/ci.yml`. Never enable from
# the published `[features]` of a downstream crate.
__test-helpers = ["__internal"]
# Internal-only re-exports for workspace tools (`tools/server`,
# `tools/mcp`) and bindings (`ffi`, `thetadatadx-py`, `thetadatadx-ts`).
# NOT a stable public surface — every symbol gated by this feature may
# change without notice. External crates MUST NOT enable this feature.
# Double-underscore prefix follows the project's `__test-helpers`
# convention for unsupported, do-not-use surfaces.
__internal = []
# Optional mimalloc allocator. Library crates do not install a
# `#[global_allocator]` of their own — that belongs in the consuming
# binary. Enabling this feature pulls `mimalloc` into the dependency
# graph so the binary can register it with one extra line; see
# `docs-site/docs/configuration.md` ("Performance tuning") for the
# integration snippet. Default-off — applications that prefer the
# system allocator pay no compile or link cost.
mimalloc-allocator = ["dep:mimalloc"]

[dependencies]
# Protobuf message types for the MDDS wire contract; the gRPC client
# in `src/grpc/` consumes these directly.
prost = "=0.14.4"
# Referenced from the prost-build-generated `proto/`-derived modules
# (e.g. `google.protobuf.Timestamp` and oneof scaffolding). Pinned to
# the same version as `prost` so the derive paths resolve.
prost-types = "=0.14.4"

# Historical-channel gRPC transport. `channel` is the client-side
# transport only — no server, router, codegen, or TLS features (TLS
# rides through the custom rustls connector in `src/grpc/channel.rs`
# so the dependency graph keeps the single `ring` CryptoProvider).
tonic = { version = "0.14", default-features = false, features = ["channel"] } # VOCAB-OK: dep crate name
# Codec bridge pairing the transport with the workspace's pinned
# `prost` message types.
tonic-prost = "0.14" # VOCAB-OK: dep crate name
# `TokioIo` adapter wrapping the custom TCP/TLS connector's streams
# into the transport's IO traits. Already in the dependency graph
# transitively; declared directly for the one adapter type.
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
# `Service<Uri>` impl for the custom connector.
tower-service = "0.3"
# Error-source downcasting in `src/grpc/channel.rs`: connection-level
# faults (GOAWAY, IO death) classify distinctly from per-stream resets
# by inspecting the `h2::Error` carried in the transport's source
# chains. Same major the transport itself compiles against, so the
# downcast sees the one unified crate version.
h2 = "0.4"
http = "1"
bytes = "1"
futures-core = "0.3"

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "fs"] }
# rustls 0.23 and tokio-rustls 0.26 default-features include `aws-lc-rs`.
# We pin `ring` as the sole CryptoProvider workspace-wide; disable defaults
# and re-add `std`, `tls12`, and `logging` (rustls's other default features)
# so behaviour matches the default build minus the aws-lc-rs provider.
# `hyper-rustls` and `rustls-platform-verifier` (pulled by reqwest below)
# inherit the same `rustls/ring`-only feature union through Cargo's
# feature unification, so the entire dep graph compiles a single provider.
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "tls12", "logging"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
webpki-roots = "1.0.7"

# FPSS SPKI certificate pinning (see `fpss::pinning`). We parse the leaf
# DER to extract the SubjectPublicKeyInfo, SHA-256 it, and constant-time
# compare against a hard-coded digest. This replaces the previous
# "accept any cert" verifier that left FPSS credentials exposed to MITM.
x509-parser = "0.18.1"
sha2 = "0.11.0"

# HTTP (auth against nexus-api). `rustls-no-provider` selects the rustls
# core + `rustls-platform-verifier` for trust roots without pulling
# reqwest's bundled aws-lc-rs provider. Cargo feature unification ties
# the transitive `rustls` and `hyper-rustls` deps to the same `ring`-only
# feature set declared on the direct `rustls` / `tokio-rustls` lines
# above, so the workspace compiles a single CryptoProvider end-to-end.
# `query` enables `RequestBuilder::query` for URL parameter encoding.
reqwest = { version = "0.13.3", features = ["json", "query", "rustls-no-provider"], default-features = false }

# Trust-root verifier for the auth HTTP client. `rustls-no-provider` leaves
# reqwest without a baked provider, so its TLS config is built explicitly with
# the ring provider and this platform verifier (the same trust mechanism reqwest
# would otherwise pick up) and handed to reqwest via `use_preconfigured_tls`.
# Already in the graph transitively through reqwest; declared directly so the
# auth client needs no process-global default.
rustls-platform-verifier = "0.7"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
# Cryptographically random bytes for scratch-file disambiguation and ephemeral
# tokens, plus the seeded shuffle / jitter sampling in `crate::backoff`
# and the FPSS host-ordering layer.
rand = "0.10"
# Per-socket TCP keepalive schedule on the FPSS connection (idle /
# interval / probe-count). `std::net::TcpStream` exposes no keepalive
# setter; `SockRef::from(&tcp)` borrows the fd without taking ownership.
# The `all` feature unlocks `TcpKeepalive::with_retries` on the
# platforms that support per-socket probe counts.
socket2 = { version = "0.6", features = ["all"] }

# Compression (responses use zstd)
zstd = "0.13.3"

# Error handling
thiserror = "2.0.18"

# Logging
tracing = "0.1.44"

# Metrics
metrics = "0.24.5"
# Optional Prometheus exporter (enabled by the `metrics-prometheus` feature).
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false, features = ["http-listener"] }

# Config file loading (optional)
toml = { version = "1.1.2", optional = true }

# Shared proto parser (`build_support/endpoints/proto_parser.rs`) is
# `#[path]`-imported from both the `build.rs` compile unit and the
# `generate_sdk_surfaces` binary. The build script pulls `regex` from
# `[build-dependencies]`; the binary pulls it from `[dependencies]`
# behind the `config-file` feature gate (see `[[bin]] required-features`).
regex = { version = "1.12.3", optional = true }
# Case conversion for the codegen identifier emitters in the
# `generate_sdk_surfaces` / `generate_docs_site` binaries (the shared
# `build_support/endpoints/helpers.rs` is `#[path]`-compiled into both the
# build script and those binaries). The build script reaches it through
# `[build-dependencies]`; the binaries through this `config-file`-gated
# `[dependencies]` entry, mirroring `regex`.
heck = { version = "0.5.0", optional = true }

# Lock-free ring buffer for FPSS event dispatch # VOCAB-OK: crate name in dep
disruptor = "4.2.0" # VOCAB-OK: actual dep crate name

# CPU core pinning for the streaming event-ring consumer thread
# (optional `consumer_cpu` tuning knob). Already in the dependency tree
# via disruptor; named directly so the drain loop can pin the real
# consumer thread, which the disruptor builder cannot reach in polling
# mode. # VOCAB-OK: crate name in dep
core_affinity = "0.8.1" # VOCAB-OK: actual dep crate name

# Optional DataFrame / Arrow extension traits (`frames` module).
# polars: minimal feature set — just enough to build DataFrame from Series.
# No lazy, no I/O, no parquet, no SQL, no compute kernels.
polars = { version = "0.54.4", optional = true, default-features = false }
# arrow-array + arrow-schema cover RecordBatch construction for the
# optional `frames` feature only.
arrow-array = { version = "59.0.0", optional = true }
arrow-schema = { version = "59.0.0", optional = true }
# JSON encoder for the FLATFILES `Format::Jsonl` output.
serde_json = "1.0.137"
# SIMD JSON parser/serializer backing the canonical JSON helpers in the
# data-format layer (`tdbe::json_canon`): finite-or-null sanitisation and
# stable key ordering for the CLI / server / MCP renderers.
sonic-rs = "0.5.8"

# Secret-wiping wrapper for password in `Credentials`. Zeroizes the backing
# buffer on drop so the plaintext is not recoverable from a core dump or
# `/proc/<pid>/mem` after the struct goes out of scope.
zeroize = "1.8.2"

# Lock-free atomic swap of an `Arc<StreamingSlot>` for the streaming
# state machine on `Client`.
arc-swap = "1.7"

# Optional mimalloc allocator. Gated behind the `mimalloc-allocator`
# feature so the default dependency graph stays unchanged; consumers
# install it as `#[global_allocator]` in their own binary.
# `default-features = false` skips the bundled override that mimalloc
# would otherwise install at runtime — the consuming binary owns that
# choice, not us.
mimalloc = { version = "0.1", default-features = false, optional = true }

# Optional prost-build for the `refresh_grpc_snapshot` developer
# binary. Stays out of the default dep graph (the build script keeps
# its own copy under `[build-dependencies]`).
prost-build = { version = "=0.14.4", optional = true }

[dev-dependencies]
# `tracing_subscriber::Layer` lets the warn-on-buffered-response unit
# tests capture emitted events without a global `init()` race against
# parallel tests.
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["registry"] }
# Used by integration tests for scratch-path disambiguation (same dep as
# the library's `[dependencies]` entry; listed explicitly so test binaries
# resolve it without relying on the lib's transitive graph).
rand = "0.10"
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
# `futures::future::join_all` for the concurrent-burst bench.
futures = "0.3"
proptest = "1.5"
# Test-only: load captured-response fixtures and their sidecar .meta.toml
# files for the decoder-regression suite.
toml = "1.1.2"

# Signal-driven sampling profiler used by the concurrent-burst bench
# to emit a flamegraph SVG when `THETADATADX_FLAMEGRAPH=1` is set.
# Pure userspace — no perf / root required. Unix-only.
# The `cfg(unix)` target-conditional dev-dependencies table MUST live
# AFTER the cross-platform `[dev-dependencies]` block.
[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph"] }
# `getrusage(RUSAGE_SELF)` snapshots in `grpc_transport_comparison` —
# CPU-seconds per measured phase without spawning `perf` or requiring
# elevated kernel settings.
libc = "0.2"

[build-dependencies]
# `prost-build` compiles `proto/mdds.proto` into Rust message types;
# the in-house client stubs are emitted by a custom service
# generator under `build_support/grpc/`, replacing the old code generator # VOCAB-OK: dep history
# entirely.
prost-build = "=0.14.4"
regex = "1.12.3"
# Case conversion for the build-time / codegen identifier emitters
# (snake_case / UpperCamelCase / lowerCamelCase). Standard build-time
# crate; replaces hand-rolled per-word case folders.
heck = "0.5.0"
# Parses `data/{trade,quote}_conditions.toml` into the committed
# `src/tdbe/conditions/tables_generated.rs` (see `build_support/conditions.rs`),
# and loads the captured-response fixture sidecars for the decode-surface
# generators. Build-time only — not in the runtime dep graph.
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }

[[bench]]
# Drives `thetadatadx::wire` proto types + `thetadatadx::decode` cell
# extractors against fixture-built `DataTable` payloads; gated on
# `__internal` so the wire / decode surfaces stay off the published API.
name = "bench_decode"
harness = false
required-features = ["__internal"]

[[bench]]
# Uses the test-only `protocol::test_wire` re-exports for FPSS payload
# builders — gated on `__test-helpers` so the wire helpers stay out of
# the default rlib.
name = "bench_protocol"
harness = false
required-features = ["__test-helpers"]

[[bench]]
name = "bench_auth"
harness = false

[[bench]]
name = "bench_fpss_event"
harness = false

[[bench]]
name = "streaming_channels"
harness = false

[[bench]]
name = "streaming_throughput"
harness = false
required-features = ["__internal"]

[[bench]]
# Drives `fpss::__test_internals::{decode_frame, DeltaState}` against
# synthetic frame bytes; gated on `__test-helpers` so the helper module
# stays out of the default rlib.
name = "bench_delta_decode"
harness = false
required-features = ["__test-helpers"]

[[bench]]
name = "historical_streaming_memory"
harness = false

[[bench]]
# Drives raw `prost::Message::decode` over `thetadatadx::wire::DataTable`
# bytes; gated on `__internal` so the wire surface stays off the
# published API.
name = "bench_protobuf_decode"
harness = false
required-features = ["__internal"]

[[bench]]
# Records allocations per decoded row for each representative tick type
# through `thetadatadx::decode::{decode_data_table, parse_*_ticks}` under
# a counting global allocator, and writes the deterministic per-row
# figures to `target/perf-gate/decode_allocations.json` for the perf
# gate. Gated on `__internal` so the wire / decode surface stays off the
# published API. The counting allocator lives only in this bench binary;
# the shipped rlib allocator is unchanged.
name = "bench_decode_allocations"
harness = false
required-features = ["__internal"]

[[bench]]
# Closed-loop measurement of the MDDS transport against a loopback
# mock server: per-request latency percentiles, aggregate throughput,
# allocation, and CPU per request across a concurrency x frame-shape
# matrix. The regression pin for the transport — compare before/after
# runs of this harness across a transport change. Gated on
# `__test-helpers` for the `grpc` / `wire` / `decode` re-exports.
name = "grpc_transport_comparison"
harness = false
required-features = ["__test-helpers"]

# Data-format layer micro-benchmarks. These exercise the internal `tdbe`
# module directly: the enum lookups and the tick field accessors.
# `bench_enums` / `bench_tick` ride the stable public types.
[[bench]]
name = "bench_enums"
harness = false

[[bench]]
name = "bench_tick"
harness = false

# Integration tests that drive `fpss::__test_internals` to exercise the
# `read_frame_into → decode_frame → StreamEvent` pipeline against synthetic
# fixture bytes. Each entry gates on `__test-helpers` so the helper
# module stays out of the default rlib.
[[test]]
name = "reconnect_storm"
path = "tests/reconnect_storm.rs"
required-features = ["__test-helpers"]

[[test]]
name = "replay_capture"
path = "tests/replay_capture.rs"
required-features = ["__test-helpers"]

[[test]]
name = "vendor_schema_drift"
path = "tests/vendor_schema_drift.rs"
required-features = ["__test-helpers"]

[[test]]
name = "decode_fuzz_property"
path = "tests/decode_fuzz_property.rs"
required-features = ["__test-helpers"]

[[test]]
name = "midframe_disconnect"
path = "tests/midframe_disconnect.rs"
required-features = ["__test-helpers"]

# Integration tests that drive the raw `grpc::{Channel, ChannelPool,
# ChannelError, Status}` surface against a mock h2c server.
# Gated on `__test-helpers` so the `grpc` module re-export stays out
# of the default rlib.
[[test]]
name = "grpc_stock_list_symbols"
path = "tests/grpc_stock_list_symbols.rs"
required-features = ["__test-helpers"]

[[test]]
name = "test_pool_reconnect"
path = "tests/test_pool_reconnect.rs"
required-features = ["__test-helpers"]

[[test]]
name = "grpc_mock_server"
path = "tests/grpc_mock_server.rs"
required-features = ["__test-helpers"]

# Pins endpoint-to-parser routing for the seven `option_history_*` /
# `index_at_time_price` endpoints. Gated on `__test-helpers` for
# `HistoricalClient::for_endpoint_routing_test` and the `grpc::{Channel, ChannelPool}`
# re-export.
[[test]]
name = "test_endpoint_routing"
path = "tests/test_endpoint_routing.rs"
required-features = ["__test-helpers"]

# DataFrame extension-trait tests. Each is gated on its feature so the
# test job that enables `arrow` / `polars` runs the column/order/dtype
# contract; without the feature the target is skipped rather than
# compiling to an empty, silently-passing binary.
[[test]]
name = "test_frames_arrow"
path = "tests/test_frames_arrow.rs"
required-features = ["arrow"]

[[test]]
name = "test_frames_polars"
path = "tests/test_frames_polars.rs"
required-features = ["polars"]

[[bin]]
name = "generate_sdk_surfaces"
path = "src/bin/generate_sdk_surfaces.rs"
required-features = ["config-file"]

[[bin]]
# Regenerates the checked-in docs-site reference tree (one page per
# registry endpoint + streaming pages + sidebar manifests + llms.txt).
# `__internal` is required because the sample-output renderer decodes
# the checked-in capture fixtures through the production decode path.
name = "generate_docs_site"
path = "src/bin/generate_docs_site.rs"
required-features = ["config-file", "__internal"]

[[bin]]
name = "refresh_grpc_snapshot"
path = "src/bin/refresh_grpc_snapshot.rs"
required-features = ["grpc-codegen"]
