[package]
name = "json_canon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "JSON canonicalisation for non-finite f64 (NaN / +Inf / -Inf -> null) shared by cli, server, and mcp."

[lints]
workspace = true

[dependencies]
sonic-rs = "0.5.8"
