[package]
name = "tdbe"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "ThetaData Binary Encoding -- market data types, FIT/FIE codecs, Black-Scholes Greeks"
documentation = "https://docs.rs/tdbe"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["thetadata", "encoding", "market-data", "codec", "greeks"]
categories = ["encoding", "finance"]

[lints]
workspace = true

[dependencies]
thiserror = "2.0.18"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "bench_fit"
harness = false

[[bench]]
name = "bench_fie"
harness = false

[[bench]]
name = "bench_price"
harness = false

[[bench]]
name = "bench_greeks"
harness = false

[[bench]]
name = "bench_enums"
harness = false

[[bench]]
name = "bench_tick"
harness = false
