[package]
name = "tdbe"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "ThetaData Binary Encoding -- market data types, FIT/FIE codecs, Black-Scholes Greeks"
documentation = "https://docs.rs/tdbe"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["thetadata", "encoding", "market-data", "codec", "greeks"]
categories = ["encoding", "finance"]
build = "build.rs"
include = [
    "src/**/*.rs",
    "data/*.toml",
    "build.rs",
    "Cargo.toml",
    "README.md",
]

[lints]
workspace = true

[dependencies]
sonic-rs = "0.5.8"
thiserror = "2.0.18"

[build-dependencies]
# Build-time only: parses `data/{trade,quote}_conditions.toml` into the
# committed `src/conditions/tables_generated.rs`. Does not ship to
# runtime consumers -- `tdbe`'s runtime dep graph is unchanged.
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "bench_fit"
harness = false

[[bench]]
name = "bench_fie"
harness = false

[[bench]]
name = "bench_price"
harness = false

[[bench]]
name = "bench_greeks"
harness = false

[[bench]]
name = "bench_enums"
harness = false

[[bench]]
name = "bench_tick"
harness = false
