[package]
name = "thetadatadx"
version = "10.0.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "No-JVM ThetaData Terminal — native Rust SDK for direct MDDS (gRPC) and FPSS (TCP) market data access"
documentation = "https://docs.rs/thetadatadx"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["thetadata", "market-data", "tick-data", "zero-copy", "low-latency"]
categories = ["finance", "api-bindings", "network-programming", "encoding"]
readme = "../../README.md"
include = ["src/**/*", "proto/**/*", "build.rs", "build_support/**/*", "Cargo.toml", "tick_schema.toml", "endpoint_surface.toml", "sdk_surface.toml", "fpss_event_schema.toml"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
config-file = ["dep:toml"]
# Pulls `prost-build` into the regular dep graph for the
# `refresh_grpc_snapshot` developer binary. Strictly off for normal
# crate builds — the build script keeps its own `prost-build` under
# `[build-dependencies]`.
grpc-codegen = ["dep:prost-build"]
# Optional Prometheus exporter. When enabled, a `metrics-exporter-prometheus`
# HTTP listener binds to `DirectConfig::metrics_port` (see the
# `observability` module) and serves recorder state on `/metrics`.
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
# DataFrame ergonomics for Rust consumers — `.to_polars()` / `.to_arrow()`
# extension traits on slices of tick rows (see `crates/thetadatadx/src/frames.rs`).
# Opt-in: polars and arrow stay behind feature flags so the default dep graph
# is unchanged. `frames` is a convenience alias pulling both in at once.
polars = ["dep:polars"]
arrow = ["dep:arrow-array", "dep:arrow-schema"]
frames = ["polars", "arrow"]
# Opt-in gate for tests that hit live MDDS / FPSS endpoints. Default-off
# so `cargo test` never burns a live call without the user asking for it.
live-tests = []
# Optional mimalloc allocator. Library crates do not install a
# `#[global_allocator]` of their own — that belongs in the consuming
# binary. Enabling this feature pulls `mimalloc` into the dependency
# graph so the binary can register it with one extra line; see
# `docs-site/docs/configuration.md` ("Performance tuning") for the
# integration snippet. Default-off — applications that prefer the
# system allocator pay no compile or link cost.
mimalloc-allocator = ["dep:mimalloc"]

[dependencies]
tdbe = { version = "0.13.1", path = "../tdbe" }

# Protobuf message types for the MDDS wire contract. The in-house
# gRPC client stack (`src/grpc/`) consumes these directly — no tonic.
prost = "=0.14.3"
prost-types = "=0.14.3"

# In-house gRPC transport — direct h2 implementation. These deps used
# to ride in via tonic transitively; declaring them explicitly pins
# versions now that tonic is gone.
h2 = "0.4"
http = "1"
http-body = "1"
bytes = "1"
pin-project-lite = "0.2"
futures-core = "0.3"
# RFC 3986 percent-decoding for the `grpc-message` trailer (see
# https://github.com/grpc/grpc/blob/master/doc/PROTOCOL-HTTP2.md —
# the spec mandates `%HH` decoding and forbids a malformed message
# from invalidating an otherwise-valid `grpc-status`).
percent-encoding = "2"

# Async runtime
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "fs"] }
tokio-stream = "0.1.18"
tokio-rustls = "0.26.4"
rustls = { version = "0.23.40", features = ["ring"] }
webpki-roots = "1.0.7"

# FPSS SPKI certificate pinning (see `fpss::pinning`). We parse the leaf
# DER to extract the SubjectPublicKeyInfo, SHA-256 it, and constant-time
# compare against a hard-coded digest. This replaces the previous
# "accept any cert" verifier that left FPSS credentials exposed to MITM.
x509-parser = "0.18.1"
sha2 = "0.11.0"
subtle = "2.6.1"

# HTTP (auth against nexus-api)
reqwest = { version = "0.13.3", features = ["json", "rustls"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.23.1", features = ["v4"] }

# Compression (responses use zstd)
zstd = "0.13.3"

# Error handling
thiserror = "2.0.18"

# Macro utility (identifier concatenation in macros).
# `pastey` is the actively-maintained successor of `paste` (archived
# 2024-10-07 by dtolnay). Drop-in replacement — same `paste!` macro.
pastey = "0.2.2"

# Logging
tracing = "0.1.44"

# Metrics
metrics = "0.24.5"
# Optional Prometheus exporter (enabled by the `metrics-prometheus` feature).
metrics-exporter-prometheus = { version = "0.18", optional = true, default-features = false, features = ["http-listener"] }

# Config file loading (optional)
toml = { version = "1.1.2", optional = true }
regex = "1.12.3"

# Lock-free ring buffer (LMAX Disruptor pattern) for FPSS event dispatch
disruptor = "4.2.0"

# Lock-free MPMC bounded queue used by the pull-iter delivery mode
# (`ThetaDataDxClient::start_streaming_iter`). The Disruptor consumer
# closure pushes events into the queue and `EventIterator::next` pops
# them on the user thread, draining a batch under one GIL acquire on
# the Python binding.
crossbeam-queue = "0.3.12"

# Optional DataFrame / Arrow extension traits (`frames` module).
# polars: minimal feature set — just enough to build `DataFrame::new(vec![Series::new(...).into()])`.
# No lazy, no I/O, no parquet, no SQL, no compute kernels. `default-features = false`
# avoids pulling the polars-plan / polars-sql / polars-parquet graph into dependents
# that only want row-to-frame materialization.
polars = { version = "0.53", optional = true, default-features = false }
# arrow-array + arrow-schema cover RecordBatch construction for the
# optional `frames` feature only. Kept optional so the default dep
# graph stays slim — FLATFILES does not pull in arrow.
arrow-array = { version = "58.3.0", optional = true }
arrow-schema = { version = "58.1.0", optional = true }
# JSON encoder for the FLATFILES `Format::Jsonl` output. One serde_json
# Value per row; `to_writer` emits compact form, then we append `\n`.
serde_json = "1.0.137"

# Secret-wiping wrapper for password in `Credentials`. Zeroizes the backing
# buffer on drop so the plaintext is not recoverable from a core dump or
# `/proc/<pid>/mem` after the struct goes out of scope.
zeroize = { version = "1.8.2", features = ["derive"] }

# Lock-free atomic swap of an `Arc<StreamingSlot>` for the streaming
# state machine on `ThetaDataDxClient`. Carries the `Arc<FpssClient>` so the
# hot read paths (`is_streaming`, `connection_status`,
# `dropped_event_count`, `panic_count`, `with_streaming`) all collapse
# to a single `state.load()`.
arc-swap = "1.7"

# Faster uncontended Mutex for the single-consumer FPSS Disruptor hot
# path (~5ns vs std::sync::Mutex's ~20-40ns). Used only at the io_loop
# delivery site; the rest of the crate stays on `std::sync::Mutex` for
# the standard poison-on-panic semantics.
parking_lot = "0.12"

# Optional mimalloc allocator. Gated behind the `mimalloc-allocator`
# feature so the default dependency graph stays unchanged; consumers
# install it as `#[global_allocator]` in their own binary. See
# `docs-site/docs/configuration.md` for the integration snippet.
# `default-features = false` skips the bundled override that mimalloc
# would otherwise install at runtime — the consuming binary owns that
# choice, not us.
mimalloc = { version = "0.1", default-features = false, optional = true }

# Optional prost-build for the `refresh_grpc_snapshot` developer
# binary. Stays out of the default dep graph (the build script keeps
# its own copy under `[build-dependencies]`).
prost-build = { version = "=0.14.3", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "async_tokio"] }
# `futures::future::join_all` for the concurrent-burst bench. Pulls in
# the umbrella `futures` crate (we already depend on `futures-core`
# directly; this gives us the executor adapters as well, dev-only).
futures = "0.3"
# Signal-driven sampling profiler used by the concurrent-burst bench
# to emit a flamegraph SVG when `THETADATADX_FLAMEGRAPH=1` is set.
# Pure userspace — no perf / root required.
pprof = { version = "0.15", features = ["flamegraph"] }
proptest = "1.5"
# Test-only: load captured-response fixtures and their sidecar .meta.toml
# files for the decoder-regression suite (`tests/test_decode_captures.rs`).
# `toml` is already a build- and opt-dependency here; adding it to
# dev-dependencies lets the tests pull the same version without the
# `config-file` feature gate.
toml = "1.1.2"
# PyO3 with `auto-initialize` so the `streaming_throughput` bench can
# acquire the GIL without an explicit `Py_Initialize`. Pinned to the
# same patch as the Python SDK shim under `sdks/python/` so the
# dev-dependency graph stays consistent. dev-only — never enters the
# published crate graph.
pyo3 = { version = "=0.28.3", features = ["auto-initialize"] }

[build-dependencies]
# `prost-build` compiles `proto/mdds.proto` into Rust message types;
# the in-house gRPC client stubs are emitted by a custom service
# generator under `build_support/grpc/`, replacing `tonic-build`
# entirely.
prost-build = "=0.14.3"
regex = "1.12.3"
toml = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
tdbe = { version = "0.13.1", path = "../tdbe" }

# POSIX `pipe2` / `write` / `close` for the asyncio wake-fd bridge used
# by the Python SDK's `streaming_async()` surface (see
# `crates/thetadatadx/src/fpss/wake.rs`). Pure libc — no abstraction layer
# — because we only need three syscalls and want the wake path to stay
# zero-allocation. Already in the dep graph transitively (rustls /
# rand_chacha pull libc on Unix); declaring it explicitly pins the
# binding-version contract.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bench]]
name = "bench_decode"
harness = false

[[bench]]
name = "bench_framing"
harness = false

[[bench]]
name = "bench_protocol"
harness = false

[[bench]]
name = "bench_auth"
harness = false

[[bench]]
name = "bench_fpss_event"
harness = false

[[bench]]
name = "streaming_channels"
harness = false

[[bench]]
name = "streaming_throughput"
harness = false

[[bench]]
name = "grpc_channel"
harness = false

[[bench]]
name = "grpc_concurrent_burst"
harness = false

[[bench]]
name = "bench_delta_decode"
harness = false

[[bin]]
name = "generate_sdk_surfaces"
path = "src/bin/generate_sdk_surfaces.rs"
required-features = ["config-file"]

[[bin]]
name = "refresh_grpc_snapshot"
path = "src/bin/refresh_grpc_snapshot.rs"
required-features = ["grpc-codegen"]
